fix for dark mode vs dark theme

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,6 +62,10 @@
     color: #ffffff;
   }
 
+  .nav-link {
+    color: #ffffff;
+  }
+
   .mac_app_button {
     background: url(../images/apps/Mac_App_Store_Badge.svg)
     no-repeat;
@@ -615,6 +619,9 @@ pre {
     --border-color: #4a5568;
     --header-bg: rgba(26, 32, 44, 0.95);
     --code-bg: #2d3748;
+    --link-color: #63b3ed;
+    background-color: #1a202c;
+    color: #fff;
   }
 }
 
